sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: type mismatch;
 found   : Double
 required: Int
      ecart = (ecart.toDouble)/1.3
                              ^